tests/parser/parse-while-let.7.bad.error
error: Malformed while-let expression
  --> test:4:32
   |
 4 |  (define f (while-let :label foo))
   |                                 ^ expected =
